# FantasyCresendoBevy

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  lint.yml  test.yml
assets/characters/: sakuya_izayoi.chr
assets/stages/: forest_of_magic.stage
benches/: capsule.rs
core/: Cargo.toml
core/benches/: capsule.rs
core/src/: geo.rs  input.rs  lib.rs  player.rs  stage.rs
core/src/character/: mod.rs
core/src/character/frame_data/: hitbox.rs  hurtbox.rs  mod.rs
core/src/character/state/: mod.rs  state.rs  transition.rs
core/src/debug/: line.frag  line.vert  mod.rs
core/src/debug/capsule/: capsule.vert  mod.rs
core/src/debug/line/: line.frag  mod.rs
core/src/geo/: mod.rs  segment.rs
core/src/input/: mod.rs
core/src/match/: mod.rs
core/src/player/: mod.rs
docs/: character-pipeline.md
editor/: Cargo.toml
game/: Cargo.toml
game/assets/characters/: marisa_kirisame.chr  reimu_hakurei.chr
game/src/: data.rs  debug.rs  input.rs  main.rs  time.rs
game/src/debug/: mod.rs
game/src/match/: events.rs  hitbox.rs  input.rs  mod.rs  physics.rs  player.rs  rule.rs  stage.rs
src/: config.rs  editor.rs  game.rs  input.rs  main.rs  time.rs
src/assets/: mod.rs
src/character/frame_data/: mod.rs
src/character/state/: mod.rs  transition.rs
src/debug/: mod.rs
src/debug/capsule/: capsule.frag  mod.rs
src/debug/line/: mod.rs
src/geo/: bounds.rs  capsule.rs  mod.rs  point.rs  segment.rs
src/match/: backroll.rs  events.rs  hitbox.rs  input.rs  mod.rs  physics.rs  player.rs  rule.rs  stage.rs
src/match/rollback/: input.rs  mod.rs  sync.rs  time_sync.rs
src/rollback/: input.rs  mod.rs  sync.rs
src/rollback/backend/: mod.rs  p2p.rs
src/rollback/protocol/: mod.rs
