[workspace]
members = [
  "core",
  "editor",
  "game"
]

[profile.release]
lto = true
opt-level = 3
panic = "abort"

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_app = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_input = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_math = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy", branch = "main" }
steamworks = { git = "https://github.com/james7132/steamworks-rs", branch = "cargo-run-fix" }
steamworks-sys = { git = "https://github.com/james7132/steamworks-rs", branch = "cargo-run-fix" }