[package]
name = "fantasy-crescendo"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2018"
default-run = "fc"

[[bin]]
name = "fc"
path = "src/game.rs"

[[bin]]
name = "fc-editor"
path = "src/editor.rs"

[profile.release]
lto = true
opt-level = 3
panic = "abort"

[features]
default = []
steam-restart = []

[dependencies]
bitflags = "1.2"
serde = "1.0"
bevy-steamworks = "0.1"
anyhow = "1.0"
serde_json = "1.0"
libm = "0.2"

parking_lot = "0.11"
async-channel = "1.6"

[dependencies.bevy]
version = "0.5"
default-features = false
features = ["bevy_winit", "render", "bevy_wgpu"]

[dependencies.bevy_backroll]
git = "https://github.com/HouraiTeahouse/backroll-rs"
branch = "main"
features = ["steam"]

[dependencies.backroll_transport_udp]
git = "https://github.com/HouraiTeahouse/backroll-rs"
branch = "main"

[dependencies.glam]
version = "0.16"
features = ["libm"]

[dev-dependencies]
criterion = "0.3"

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_app = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_input = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_math = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy", branch = "main" }
steamworks = { git = "https://github.com/james7132/steamworks-rs", branch = "cargo-run-fix" }
steamworks-sys = { git = "https://github.com/james7132/steamworks-rs", branch = "cargo-run-fix" }

[[bench]]
name = "capsule"
harness = false