[package]
name = "fc-core"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2018"

[dependencies]
bitflags = "1.2"
serde = "1.0"

[dependencies.bevy_math]
git = "https://github.com/bevyengine/bevy"
branch = "main"

[dependencies.bevy_input]
git = "https://github.com/bevyengine/bevy"
branch = "main"

[dependencies.glam]
version = "0.13"
features = ["libm"]