[package]
name = "fc-core"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2018"

[dependencies]
bitflags = "1.2"
serde = "1.0"

[dependencies.bevy]
version = "0.5"
default-features = false
features = ["render"]

[dependencies.bevy_input]
version = "0.5"
features = ["serialize"]

[dependencies.glam]
version = "0.15"
features = ["libm"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "capsule"
harness = false