[package]
name = "fc"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
fc-core = { path = "../core" }
anyhow = "1.0"
serde_json = "1.0"
bitflags = "1.2"
bevy_rapier3d = { version = "0.9", features = ["enhanced-determinism"]}

[dependencies.bevy]
version = "0.5"
default-features = false
features = ["bevy_winit", "render", "bevy_wgpu"]