[package]
name = "fc"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
fc-core = { path = "../core" }
bevy-steamworks = "0.1"
anyhow = "1.0"
serde_json = "1.0"
bitflags = "1.2"
libm = "0.2"

[dependencies.bevy]
version = "0.5"
default-features = false
features = ["bevy_winit", "render", "bevy_wgpu"]